# aws-cost-transformer-forecast

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md
notebooks/: 01_treinamento_e_avaliacao.ipynb
src/aws_cost_forecast/: __init__.py
src/aws_cost_forecast/api/: inference.py  main.py
src/aws_cost_forecast/data/: synthetic_aws_cost.py
src/aws_cost_forecast/model/: positional_encoding.py  transformer.py
src/aws_cost_forecast/training/: train.py
tests/: test_api.py  test_data.py  test_model.py  test_training.py
